<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_breeding"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/s_breeding" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/s_diary" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/s_inventory" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_red_24dp"
            android:title="@string/s_profile" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/s_product" />
        <item
            android:id="@+id/nav_configuration"
            android:icon="@drawable/ic_configuracion_red_24dp"
            android:title="@string/s_configuration" />
    </group>

    <item android:title="Options">
        <menu>
            <item
                android:id="@+id/nav_Sing_off"
                android:icon="@drawable/ic_person_red_24dp"
                android:title="@string/s_sing_off" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_report_red_24dp"
                android:title="@string/s_about" />
        </menu>
    </item>

</menu>
