<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_configuracion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ConfigurationFragment">

    <!-- TODO: Update blank fragment layout -->

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableLayout
        android:id="@+id/tableLayoutConfiguracion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/cheSesion"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:text="@string/s_keep_session" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/s_notification" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/cheAuthorization_notification"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:text="@string/s_authorization_notification"
                android:visibility="invisible" />
        </TableRow>

    </TableLayout>


</android.support.design.widget.CoordinatorLayout>