<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="396dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/txtreferencia_item_insumo"
                android:layout_width="379dp"
                android:layout_height="33dp"
                android:background="@android:color/darker_gray"
                android:text="@string/s_lote_detalle" />

            <TextView
                android:id="@+id/txtPresentacion_item_insumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/s_nombre_detalle"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtsaldo_item_insumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/s_genero_detalle"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtfecha_item_insumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/s_genero_detalle"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/idImagen"
        android:layout_marginTop="11dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>