<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".UsuarioAtivity">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_material_light_1x"
        android:gravity="right|center">

        <TextView
            android:id="@+id/texManage"
            android:layout_width="197dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/s_gestonar"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/imaNew"
            android:layout_width="49dp"
            android:layout_height="43dp"
            android:onClick="onClick"
            android:src="@drawable/ic_add" />

        <ImageView
            android:id="@+id/imaSave"
            android:layout_width="57dp"
            android:layout_height="42dp"
            android:onClick="onClick"
            android:src="@drawable/ic_save" />

        <ImageView
            android:id="@+id/imaDelete"
            android:layout_width="58dp"
            android:layout_height="42dp"
            android:onClick="onClick"
            android:src="@drawable/ic_delete" />

    </TableRow>

    <ImageView
        android:id="@+id/imgPhotoUserR"
        android:layout_width="120dp"
        android:layout_height="101dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:onClick="onClick"
        android:src="@drawable/user" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/ediNameUserR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="15"
                android:hint="@string/s_name_user"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/ediEmailUserR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="10"
                android:hint="@string/s_email_user"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/ediPasswordUserR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="10"
                android:hint="@string/s_pass_loguin"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="268dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <TextView
                android:id="@+id/texId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>
</LinearLayout>