<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorButtonNormal"
    tools:context=".Fragment.LevanteGestionarFragment">


    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_material_light_1x"
        android:gravity="right|center">

        <TextView
            android:id="@+id/texManageA"
            android:layout_width="197dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/s_menu_levante"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/imaNewA"
            android:layout_width="49dp"
            android:layout_height="43dp"
            android:onClick="onClick"
            android:src="@drawable/ic_add"
            tools:ignore="OnClick" />

        <ImageView
            android:id="@+id/imaSaveA"
            android:layout_width="57dp"
            android:layout_height="42dp"
            android:onClick="onClick"
            android:src="@drawable/ic_save"
            tools:ignore="OnClick" />

        <ImageView
            android:id="@+id/imaDeleteA"
            android:layout_width="58dp"
            android:layout_height="42dp"
            android:onClick="onClick"
            android:src="@drawable/ic_delete"
            tools:ignore="OnClick" />

    </TableRow>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_lote_detalle"
                android:textColor="@color/colorPrimaryDark" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <Spinner
                android:id="@+id/spinnerLote"
                android:layout_width="114dp"
                android:layout_height="25dp"
                android:background="@drawable/cuadro_texto_blanco" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_nombre_detalle"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <EditText
                android:id="@+id/ediNombreL"
                android:layout_width="231dp"
                android:layout_height="match_parent"
                android:background="@drawable/cuadro_texto_blanco"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_genero_detalle"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <Spinner
                android:id="@+id/spinnerGenero"
                android:layout_width="130dp"
                android:layout_height="25dp"
                android:background="@drawable/cuadro_texto_blanco" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_raza_detalle"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <Spinner
                android:id="@+id/spinnerRaza"
                android:layout_width="130dp"
                android:layout_height="25dp"
                android:background="@drawable/cuadro_texto_blanco" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_tipo_ingreso_detalle"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <Spinner
                android:id="@+id/spinnerIngreso"
                android:layout_width="130dp"
                android:layout_height="25dp"
                android:background="@drawable/cuadro_texto_blanco" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">


        </TableRow>

    </TableLayout>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/butFechaL"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:onClick="onClick"
            android:text="@string/s_fecha_detalle"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            tools:ignore="MissingConstraints,OnClick"
            tools:layout_editor_absoluteX="119dp" />

        <EditText
            android:id="@+id/ediFechaL"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:background="@drawable/cuadro_texto_blanco"
            android:ems="10"
            android:gravity="fill_horizontal"
            android:inputType="textPersonName" />

    </TableRow>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_margin="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_numero_chapeta_detalle"
                android:textColor="@color/colorPrimaryDark" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/ediChapetaL"
                android:layout_width="238dp"
                android:layout_height="match_parent"
                android:background="@drawable/cuadro_texto_blanco"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>


    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_observacion_detalle"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

            <EditText
                android:id="@+id/ediObservacionL"
                android:layout_width="336dp"
                android:layout_height="match_parent"
                android:background="@drawable/cuadro_texto_blanco"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>